# GreenSmokeLabs-Expensynth

./: Makefile  README.md
.github/workflows/: deploy-backend-dev.yml  deploy-backend-prod.yml
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/green_smoke_labs_expensynth/: alembic.ini  lifecycle.py  main.py
backend/green_smoke_labs_expensynth/alembic/: env.py
backend/green_smoke_labs_expensynth/alembic/versions/: 8f073d143810_create_transaction_model.py
backend/green_smoke_labs_expensynth/api/: router.py
backend/green_smoke_labs_expensynth/api/routes/: health_check.py  transaction_parsing.py  transactions.py  user_rag.py
backend/green_smoke_labs_expensynth/api/schemas/: bot_schemas.py  db_schemas.py  transaction_parsing_schemas.py  transaction_schemas.py
backend/green_smoke_labs_expensynth/configs/: database.py
backend/green_smoke_labs_expensynth/services/transaction_parsing_service/: __init__.py
backend/green_smoke_labs_expensynth/services/transaction_parsing_service/transaction_parser_workflow/: flow.py  types.py
backend/green_smoke_labs_expensynth/services/transaction_parsing_service/transaction_parser_workflow/config/: agents.yaml
backend/green_smoke_labs_expensynth/services/user_query_service/query_parser_workflow/: flow.py
backend/green_smoke_labs_expensynth/services/user_query_service/query_parser_workflow/config/: agents.yaml
backend/green_smoke_labs_expensynth/utils/: embeddings.py  types.py
frontend/: main.py  requirements.txt  server.py
frontend/agents/: vector_agent.py
