[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "green-smoke-labs-expensynth"
version = "0.1.0"
description = "Green Smoke Labs Expensynth"
authors = [
    { name = "Shrijeeth S", email = "shrijeethsuresh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "python-dotenv==1.1.0",
    "modal==1.0.2",
    "pydantic==2.11.5",
    "pydantic_settings==2.9.1",
    "fastapi[standard]==0.115.2",
    "sqlalchemy==2.0.41",
    "psycopg2-binary==2.9.10",
    "alembic==1.16.1",
    "asyncpg==0.30.0",
    "llama-index==0.12.40",
    "llama-index-core==0.12.40",
    "llama-index-llms-litellm==0.5.1",
    "llama-index-vector-stores-qdrant==0.6.0",
    "llama-index-embeddings-litellm==0.3.0",
]


[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = true

